# vkapi_cpp

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  example_01.cpp
include/vkapi/: client.h  config.h  error.h  request.h  vkapi.h
src/vkapi/: config.cpp  error.cpp  oauth.cpp  request.cpp
src/vkapi/client/: request.cpp  vkapi.cpp
